# italian_lessons

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml  requirements.txt
Scripts/: activate  activate.bat  translate
docs/: about.html  index.html  listings.json  search.json
docs/nbs/: it_corpus_explore.html
docs/posts/: Verb Conjugations.html
docs/posts/Avere and Essere/: Avere and Essere.html
docs/posts/Lesson 1/: 01_lesson.html
docs/posts/Lesson 2/: 02_lesson.html
docs/posts/Lesson 3/: Lesson 3.html
docs/posts/Numbers/: Numbers.html
docs/posts/post-with-code/: index.html
docs/posts/welcome/: index.html
docs/site_libs/bootstrap/: bootstrap.min.css
nbs/: Untitled.ipynb  it_corpus_explore.ipynb
posts/: Verb Conjugations.ipynb
posts/Avere and Essere/: Avere and Essere.ipynb
posts/Lesson 1/: 01_lesson.ipynb
posts/Lesson 1/.ipynb_checkpoints/: 01_lesson-checkpoint.ipynb
posts/Lesson 2/: 02_lesson.ipynb
posts/Lesson 3/: Lesson 3.ipynb
posts/Numbers/: Numbers.ipynb  Untitled.ipynb
src/learnitalian/: speak.py
