[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "learnitalian"
version = "0.0.1"
authors = [
  { name="Andrew Boney", email="andrew.boney@hotmail.co.uk" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AndrewBoney/italian_lessons"
"Bug Tracker" = "https://github.com/AndrewBoney/italian_lessons/issues"